--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- <script src="index.js"></script> -->
     <!-- <h1>Hola Mundo</h1> -->
     <!-- <script src="../dist/main.js"></script> -->
-    <img src="assets/img/webpack-logo.png" alt="webpack logo">
+    <img src="./assets/img/webpack-logo.png" alt="webpack logo">
     <!-- queda pendiente mover recursos estaticos -->
 
 
